@@ -1,5 +1,5 @@
 /*
- *  $Id: server.h,v 1.3.2.1 2008/04/29 07:01:00 schmirl Exp $
+ *  $Id: server.h,v 1.3.2.2 2008/10/14 11:05:59 schmirl Exp $
  */
  
 #ifndef VDR_STREAMDEV_SERVER_H
@@ -13,6 +13,7 @@
 #define DEFAULT_EXTERNREMUX (*AddDirectory(cPlugin::ConfigDirectory(PLUGIN_NAME_I18N), "externremux.sh"))
 #define STREAMDEVHOSTSPATH (*AddDirectory(cPlugin::ConfigDirectory(PLUGIN_NAME_I18N), "streamdevhosts.conf"))
 
+extern char *opt_auth;
 extern char *opt_remux;
 
 class cStreamdevServer: public cThread {
